feat(as-5902): use enter code journey for email confirmation, add 3 try logic
