# packages/appeals-service-api/src/routes/confirm-email.js
@@ -1,11 +1,0 @@
-const express = require('express');
-
-const { confirmEmailCreate, confirmEmailGet } = require('../controllers/confirm-email');
-
-const router = express.Router();
-
-router.get('/:id', confirmEmailGet);
-
-router.post('/', confirmEmailCreate);
-
-module.exports = router;
