# packages/appeals-service-api/src/routes/index.js
@@ -14,7 +14,6 @@ const saveRouter = require('./save');
 const tokenRouter = require('./token');
 const localPlanningAuthoritiesRouter = require('./local-planning-authorities');
 const apiDocsRouter = require('./api-docs');
-const confirmEmailRouter = require('./confirm-email');
 const finalCommentsRouter = require('./final-comments');
 
 router.use('/api/v1/appeals', appealsRouter);
@@ -24,7 +23,6 @@ router.use('/api/v1/local-planning-authorities', localPlanningAuthoritiesRouter)
 router.use('/api-docs', apiDocsRouter);
 router.use('/api/v1/save', saveRouter);
 router.use('/api/v1/token', tokenRouter);
-router.use('/api/v1/confirm-email', confirmEmailRouter);
 router.use('/api/v1/final-comments', finalCommentsRouter);
 
 module.exports = router;
